# projeto-gemeo-digital-deputados

./: .coverage  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
tests/: test_connectors.py
