[project]
name = "gemeo-digital-legislativo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "apify-client>=1.7",
    "pytrends>=4.9",
]

[dependency-groups]
spark   = ["pyspark>=3.5", "delta-spark>=3.1"]
models  = ["statsmodels>=0.14", "scikit-learn>=1.4", "prophet>=1.1",
           "pmdarima>=2.0", "scipy>=1.13"]
nlp     = ["torch>=2.2", "transformers>=4.40",
           "sentence-transformers>=3.0", "chromadb>=0.5",
           "langchain>=0.2", "langchain-ollama>=0.1"]
dashboard = ["streamlit>=1.35", "plotly>=5.22", "altair>=5.3",
             "fastapi>=0.111", "uvicorn>=0.29", "mangum>=0.17"]
dev     = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4",
           "jupyterlab>=4.0", "moto>=5.0"]


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle (erros de formatação)
# F: Pyflakes (erros lógicos, variáveis não usadas)
# I: isort (ordenação de imports)
# UP: pyupgrade (sintaxe moderna do Python)
# N: pep8-naming (padrões de nomenclatura)
select = ["E", "F", "I", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src"